DhimanEKS/eks/ingress/deploy/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment2
  labels:
    app: deployment2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-api-2
  template:
    metadata:
      labels:
        app: web-api-2
    spec:
      containers:
      - name: web-api
        image: dhimanhalder/web-api:1.0
        ports:
        - containerPort: 8080
