DhimanEKS/eks/ingress/deploy/service1.yaml
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: default
spec:
  selector:
    app: web-api-1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
