DhimanEKS/eks/ingress/deploy/service2.yaml
kind: Service
apiVersion: v1
metadata:
  name: service2
  namespace: default
spec:
  selector:
    app: web-api-2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
